<resources>
    <string name="app_name">PropertyListing</string>
    <string name="extendedPrice">%s%s %s for %d nights</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>

    <string name="hostedBy">Hosted by %s</string>
    <string name="hosting">hosting</string>

    <string name="show_more">Show more</string>

    <plurals name="numberOfGuest">
        <item quantity="one">%d guest</item>
        <item quantity="other">%d guests</item>
    </plurals>
    <plurals name="numberOfBedroom">
        <item quantity="one">%d bedroom</item>
        <item quantity="other">%d bedrooms</item>
    </plurals>
    <plurals name="numberOfBed">
        <item quantity="one">%d bed</item>
        <item quantity="other">%d beds</item>
    </plurals>
    <plurals name="numberOfBath">
        <item quantity="one">%d bath</item>
        <item quantity="other">%d baths</item>
    </plurals>

    <plurals name="numberOfReview">
        <item quantity="one">Review</item>
        <item quantity="other">Reviews</item>
    </plurals>

    <plurals name="numberOfDay">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="numberOfWeek">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>

    <plurals name="numberOfMonth">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>

    <plurals name="numberOfYear">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>


    <string name="city_view">City view</string>
    <string name="city_view_des">Soak up the view during your stay.</string>


    <string name="dive_right_in">Dive right in</string>
    <string name="dive_right_in_des">This is one of the few places in the area with a pool</string>


    <string name="extra_spacious">Extra spacious</string>
    <string name="extra_spacious_des">Guests love this home\'s spaciousness for a comfortable stay.</string>


    <string name="self_check_in">Self check-in</string>
    <string name="self_check_in_des">Check yourself in with the key safe.</string>

    <string name="peace_and_quiet">Peace and quiet</string>
    <string name="peace_and_quiet_des">Guests say this home is in a quiet area.</string>
    <string name="close_bottom_sheet">Close bottom sheet</string>
    <string name="reviewStandout">Review Standout</string>
    <string name="reserve">Reserve</string>

    <string name="total">Total</string>
    <string name="about_this_place">About this place</string>
    <string name="find_a_room">Find a room</string>
    <string name="ago">ago</string>
    <string name="onAirbnb">on Airbnb</string>


</resources>