package com.demobnb.propertylisting.util

object TestTags {

    object ExpandableTextView {
        const val bottomSheetContentText = "BottomSheetContentText"
    }

}